@@ -23,7 +23,7 @@ showlog.button.tooltip=Show log for {0}
 download.button.text=Download
 blame.button.text=Blame
 diffprev.button.text=Diff to previous
-diffprev.button.tooltip=Diff this file revision ({0}) to previous
+diffprev.button.tooltip=Diff {0} revision {1} to its previous revision
 diff.button.text=Show diff
 diff.button.tooltip=Show diff in side by side mode
 unifieddiff.button.text=Show unified diff
@@ -46,7 +46,7 @@ listfiles.link.tooltip=Show\\u00a0/\\u00a0hide\\u00a0directory\\u00a0contents
 force-display.button.text=Force display
 showarchivefile.button.text=Show archive contents
 
-diff.error.identical=Files are identical.
+diff.error.identical=Files are identical, {0}@{1} and {2}@{3}.
 diff.error.binary=One or both files selected for diff is in binary format.
 
 revinfo.previousrev=Previous revision
